--- a/themes/wmgk/assets/css/wmgk.css
+++ b/themes/wmgk/assets/css/wmgk.css
@@ -6609,8 +6609,7 @@ a.podcast__rss:active {
 
 .podcast-player--compact {
   position: relative;
-  display: block;
-  width: 92.5%;
+  display: table;
   border: 1px solid #d0d2d3;
   border-width: 1px 0;
   margin: 1.5em 0;
